--- a/src/components/StyledTagItem/style.css
+++ b/src/components/StyledTagItem/style.css
@@ -1,23 +1,25 @@
 .styled-tag-item {
 	background: transparent;
-	padding: .4em .5em;
+	padding: .4em .8em;
 	margin: 0 .3em .3em 0;
-	border: 1px solid #979797;
-	font-size: 15px;
-	color: #434343;
+	border: 1px solid #ffffff;
+	font-size: 18px;
+	font-weight: 500;
+	color: #ffffff;
 	outline: 0;
 	cursor: pointer;
 	opacity: .8;
 }
 
 .styled-tag-item:hover {
-	border: 1px solid #000;
+	border: 1px solid #026966;
 	opacity: 1;
 }
 
 .styled-tag-item.active {
-	background: #484848;
+	background: #026966;
 	color: #fff;
-	border: 1px solid #484848;
+	border: 1px solid #026966;
+	border-radius: 3px;
 	opacity: 1;
 }
