--- a/src/components/RangeSlider/style.css
+++ b/src/components/RangeSlider/style.css
@@ -114,7 +114,7 @@
 
 .rangeslider-horizontal .rangeslider__fill {
     height: 100%;
-    background-color: #1FA22E;
+    background-color: #039073;
     border-radius: 10px;
     top: 0
 }
@@ -137,11 +137,11 @@
     top: 7px;
     left: 7px;
     border-radius: 50%;
-    background-color: #A9A9A9;
+    background-color: #026966;
 }
 
 .rangeslider-horizontal .rangeslider__handle:focus:after {
-    background-color: green;
+    background-color: #026966;
 }
 
 .rangeslider-horizontal .rangeslider__handle-tooltip {
