Changes. Important - on this commit app.js is changed to handle the data as state. issues with re-rendering the parent component.

--- a/src/components/PageTitle/style.css
+++ b/src/components/PageTitle/style.css
@@ -1,4 +1,6 @@
 .page-title {
+	position: relative;
+	left: -30px;
 	font-size:calc(24px + 0.4vw);
 	font-weight: 300;
 	color: #ffffff;
@@ -8,4 +10,10 @@
 	color: #FFD24C;
 	font-weight: 700;
 	margin-right: 20px;
+}
+
+@media only screen and (max-width: 1370px) {
+	.page-title {
+		left: auto;
+	}
 }
