--- a/src/modules/NewMemberModule/style.css
+++ b/src/modules/NewMemberModule/style.css
@@ -2,6 +2,7 @@
   padding: 0 70px 50px 70px;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   /* FF 4-18 */
   /* FF 19+ */
   /* IE 10+ */ }
