--- a/src/modules/NewMemberModule/style.scss
+++ b/src/modules/NewMemberModule/style.scss
@@ -2,6 +2,7 @@
   padding: 0 70px 50px 70px;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 
   &.dark {
     background-image: url(/new_member_module_bckg-dark.jpg);
