Previews of filtering added. More updates.

--- a/src/components/StyledCard/style.css
+++ b/src/components/StyledCard/style.css
@@ -3,8 +3,9 @@
 }
 
 .styled-card  .card-image {
+	background-size: cover;
 	display: block;
-	background: #EAEAEA;
+	background-color: #EAEAEA;
 	height: 320px;
 }
 
