--- a/src/modules/CardSlider/style.css
+++ b/src/modules/CardSlider/style.css
@@ -1,3 +1,30 @@
+.cards-slider {
+  position: relative;
+  margin: 50px 0; }
+  .cards-slider:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 2000px;
+    left: -2000px;
+    background: #ffffff;
+    z-index: 99; }
+  .cards-slider .slick-slider {
+    width: calc(100% + 30px);
+    margin-left: -15px;
+    padding-top: 100px; }
+    .cards-slider .slick-slider .slick-slide {
+      padding: 0 15px; }
+  .cards-slider .slick-slider .slick-arrow.slick-prev {
+    top: 0;
+    left: 15px; }
+  .cards-slider .slick-slider .slick-arrow.slick-next {
+    top: 0;
+    left: 93px; }
+  .cards-slider .slick-slider .slick-arrow {
+    width: 76px;
+    height: 76px; }
+
 .slider-container {
   overflow: hidden;
   padding: 0 10% 100px 10%;
@@ -126,8 +153,9 @@
     user-select: none; }
 
 .slider-card .card-image {
-  background: #EAEAEA;
-  height: 320px; }
+  background-color: #EAEAEA;
+  height: 320px;
+  display: block; }
 
 .slider-card .card-text-container p {
   font-size: 15px;
@@ -141,8 +169,7 @@
   margin: 0; }
 
 .cards-slider .slick-slide {
-  float: left;
-  margin-right: 15px; }
+  float: left; }
 
 .cards-slider .slick-list {
   overflow: visible; }
