--- a/src/modules/NewMemberModule/style.scss
+++ b/src/modules/NewMemberModule/style.scss
@@ -1,5 +1,6 @@
 .new-member-module {
   padding: 0 70px 50px 70px;
+  margin: 80px 0;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
