Updates for deployw

--- a/src/components/CityTag/style.scss
+++ b/src/components/CityTag/style.scss
@@ -6,7 +6,7 @@
 		display: inline-block;
 		padding: 10px 20px 10px 40px;
 		font-size: 17px; 
-		color: #b7402f;
+		color: #DF4A1B;
 		background-color: #FDB9AF;
 		border: 1px solid #F1978A;
 		border-radius: 33px;
@@ -25,7 +25,7 @@
 			background: transparent;
 			border: none;
 			outline: none;
-			color: #b7402f;
+			color: #DF4A1B;
 			font-size: 17px;
 			text-decoration: underline;
 			font-style: italic;
