--- a/src/components/Preamble/style.css
+++ b/src/components/Preamble/style.css
@@ -1,7 +1,7 @@
 .preamble {
 	opacity: 0.7;
 	font-size: 18px;
-	color: #383838;
+	color: #ffffff;
 	letter-spacing: 0;
 	line-height: 24px;
 	max-width: 500px;
