--- a/src/components/PageTitle/style.css
+++ b/src/components/PageTitle/style.css
@@ -4,6 +4,8 @@
 	font-size:calc(24px + 0.4vw);
 	font-weight: 300;
 	color: #ffffff;
+	font-family: 'Roboto';
+	margin-bottom: 30px;
 }
 
 .page-title span {
