--- a/src/modules/CrossSiteLinksModule/style.css
+++ b/src/modules/CrossSiteLinksModule/style.css
@@ -6,7 +6,8 @@
   .image-box-wrap .image-box {
     background: rgba(0, 0, 0, 0.5);
     background-position: center;
-    background-size: cover; }
+    background-size: cover;
+    z-index: 99; }
     .image-box-wrap .image-box a {
       position: relative;
       height: 100%;
@@ -44,7 +45,8 @@
       font-size: calc(16px + 1.5vw);
       font-weight: 600;
       color: #ffffff;
-      letter-spacing: -1px;
+      letter-spacing: 0;
+      font-family: 'Roboto';
       margin: 0.8vw 0; }
   .image-box-wrap a {
     text-decoration: none;
