--- a/src/modules/CrossSiteLinksModule/style.scss
+++ b/src/modules/CrossSiteLinksModule/style.scss
@@ -8,6 +8,7 @@
       background: rgba(0,0,0,.5);
     background-position: center;
     background-size: cover;
+    z-index: 99;
     a {
       position: relative;
       height: 100%;
@@ -55,7 +56,8 @@
 		font-size: calc(16px + 1.5vw);
 		font-weight: 600;
 		color: #ffffff;
-		letter-spacing: -1px;
+		letter-spacing: 0;
+    font-family: 'Roboto';
 		margin: 0.8vw 0;
     }
   }
