--- a/src/modules/Footer/style.scss
+++ b/src/modules/Footer/style.scss
@@ -8,19 +8,25 @@ footer {
 	background-repeat: no-repeat;
 	a {
 		font-size: 22px;
+		font-family: 'Roboto';
+		font-weight: 600;
 		color: #ffffff;
 		text-decoration: none;
 	}
 	.footer-box {
-		border-top: 2px solid rgba(255, 255, 255, 0.38);
+		border-top: 1px solid rgba(255, 255, 255, 0.38);
 		padding-top: 10px;
 		margin-top: 30px;
 		h4 {
 			font-size: 18px;
-			margin: 0 0 5px 0;
+			color: #FDB9AF;
+			font-weight: 600;
+			margin: 5px 0 5px 0;
 		}
 		p {
 			font-size: 15px;
+			font-weight: 400;
+			margin-top: 5px;
 		}
 	}
 	
