--- a/src/modules/FullSizeSlider/style.css
+++ b/src/modules/FullSizeSlider/style.css
@@ -44,12 +44,12 @@
 .slick-slider .slick-arrow:before {
   content: '';
   position: absolute;
-  width: 12px;
-  height: 21px;
+  width: 9px;
+  height: 16px;
   left: 50%;
   top: 50%;
-  margin-top: -10px;
-  margin-left: -6px; }
+  margin-top: -8px;
+  margin-left: -4px; }
 
 .slick-slider .slick-arrow.slick-prev {
   right: 102px;
@@ -91,16 +91,25 @@
 
 .full-size-slider-card .card-text-container {
   bottom: 20px;
-  left: 30px;
+  left: 0;
   position: absolute;
   color: #fff; }
 
 .full-size-slider-card h2 {
   color: #fff;
-  margin-top: 0; }
+  margin-top: 0;
+  margin-bottom: 40px; }
 
 .slick-container {
   position: relative; }
+  .slick-container .container {
+    position: relative; }
   .slick-container .city-tag-wrap {
     position: absolute;
     top: 40px; }
+  .slick-container .category-text {
+    color: #FFD24C;
+    font-family: 'Roboto';
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px; }
