--- a/src/modules/HeaderImage/style.css
+++ b/src/modules/HeaderImage/style.css
@@ -2,7 +2,8 @@
 	position: relative;
 	background-repeat: no-repeat;
 	background-position: top center;
-	padding: 230px 30px 100px 30px;
+	background-size: cover;
+	padding: 165px 30px 100px 30px;
 	z-index: 1;
 }
 .header-image:after {
@@ -13,8 +14,8 @@
 	bottom: 0;
 	left: 0;
 	z-index: -1;
-	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 15%, rgba(0,0,0,1) 85vh, rgba(0,0,0,1) 99%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 15%,rgba(0,0,0,1) 85vh,rgba(0,0,0,1) 99%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 15%,rgba(0,0,0,1) 85vh,rgba(0,0,0,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	background: -moz-linear-gradient(top, rgba(26,26,26,0) 0%, rgba(0,0,0,0) 15%, rgba(26,26,26,1) 85vh, rgba(26,26,26,1) 99%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, rgba(26,26,26,0) 0%,rgba(0,0,0,0) 15%,rgba(26,26,26,1) 85vh,rgba(26,26,26,1) 99%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, rgba(26,26,26,0) 0%,rgba(0,0,0,0) 15%,rgba(26,26,26,1) 85vh,rgba(26,26,26,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
