--- a/src/modules/NewMemberModule/style.css
+++ b/src/modules/NewMemberModule/style.css
@@ -11,30 +11,49 @@
     background-image: url(/new_member_module_bckg-dark.jpg); }
     .new-member-module.dark .tabs-nav {
       background: #FDB9AF; }
+      .new-member-module.dark .tabs-nav li {
+        color: rgba(65, 65, 64, 0.42); }
+      .new-member-module.dark .tabs-nav .react-tabs__tab--selected {
+        color: #484848; }
     .new-member-module.dark button {
-      background: #039073; }
+      background: #039073;
+      color: #FFD24C; }
     .new-member-module.dark .tab button {
       background: transparent;
       border: 2px solid #C6C6C6;
-      color: #000000; }
+      color: #323648; }
+    .new-member-module.dark .tab p {
+      color: #323648; }
+    .new-member-module.dark h2 {
+      color: #ffffff; }
+    .new-member-module.dark .new-member-p {
+      color: #ffffff; }
   .new-member-module.light {
     background-image: url(/new_member_module_bckg-light.jpg); }
   .new-member-module a {
     font-size: 12px; }
   .new-member-module .new-member-h2 {
     width: 83%;
-    font-size: 48px;
-    letter-spacing: -3px; }
+    font-size: 70px;
+    letter-spacing: 0;
+    font-family: 'Roboto';
+    margin-bottom: 30px; }
   .new-member-module .new-member-p {
     width: 83%;
+    font-size: 24px;
     margin-top: -15px;
     margin-bottom: 70px; }
+  .new-member-module .cta-button {
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 14px 38px; }
   .new-member-module .phone-tabs {
     background: #ffffff; }
   .new-member-module .tab-container .tab.react-tabs__tab-panel--selected {
     padding: 50px;
     max-height: 350px;
-    overflow-y: scroll; }
+    overflow-y: hidden; }
     .new-member-module .tab-container .tab.react-tabs__tab-panel--selected a {
       color: #484848; }
   .new-member-module .tab .input-wrap {
@@ -46,6 +65,7 @@
     box-sizing: border-box;
     font-size: 26px;
     font-weight: bold;
+    font-family: 'Roboto';
     border: none;
     border-bottom: 1px solid #757575;
     background: transparent;
@@ -55,15 +75,24 @@
     .new-member-module .tab input:focus {
       outline: none; }
     .new-member-module .tab input::placeholder {
-      color: #959595; }
+      color: #C4C4C4; }
   .new-member-module .tab p {
-    font-size: 26px; }
+    font-size: 26px;
+    font-family: 'Roboto';
+    font-weight: 600;
+    margin: 10px 0 40px 0; }
   .new-member-module .tab .icon-cellphone {
     position: absolute;
     top: 4px;
     width: 18px;
     height: 30px;
     background-image: url(/cellphone-iphone.png); }
+  .new-member-module .tab button {
+    margin-right: 20px;
+    font-size: 15px;
+    text-transform: uppercase; }
+  .new-member-module .tab .small-link {
+    font-size: 15px; }
   .new-member-module input:focus::-webkit-input-placeholder {
     color: transparent; }
   .new-member-module input:focus:-moz-placeholder {
@@ -74,18 +103,27 @@
     color: transparent; }
   .new-member-module .tab-content Button {
     margin-right: 25px; }
+  .new-member-module .tab-container {
+    position: relative;
+    height: 100%; }
   .new-member-module .tabs-nav {
     display: flex;
     justify-content: space-evenly;
     background: #323648;
     margin: 0;
     list-style: none;
-    padding: 0; }
+    padding: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: inset 0px 1px 6px rgba(179, 81, 66, 0.5); }
     .new-member-module .tabs-nav li {
       line-height: 61px;
       text-decoration: none;
       color: #888A94;
       font-size: 18px;
+      font-weight: 600;
       text-align: center;
       cursor: pointer; }
     .new-member-module .tabs-nav .react-tabs__tab--selected {
